/**
 * æ¥å…¥å±‚ç»Ÿä¸€ç±»å‹å®šä¹‰
 * Connector â†’ Endpoint â†’ Binding ä¸‰çº§æ¨¡å‹
 */

// ============ åè®®æšä¸¾ ============

export const PROTOCOL_TYPES = [
  'mqtt', 'opcua', 'modbus', 'ethernet-ip', 'profinet', 'ethercat',
  'mysql', 'postgresql', 'kafka', 'clickhouse',
  'redis', 'neo4j', 'minio', 'influxdb', 'qdrant',
  'http', 'grpc', 'websocket',
] as const;
export type ProtocolType = typeof PROTOCOL_TYPES[number];

export const PROTOCOL_CATEGORIES: Record<string, { label: string; protocols: ProtocolType[] }> = {
  industrial: { label: 'å·¥ä¸šåè®®', protocols: ['mqtt', 'opcua', 'modbus', 'ethernet-ip', 'profinet', 'ethercat'] },
  database: { label: 'æ•°æ®åº“', protocols: ['mysql', 'postgresql', 'clickhouse', 'influxdb', 'redis', 'neo4j', 'qdrant'] },
  messaging: { label: 'æ¶ˆæ¯é˜Ÿåˆ—', protocols: ['kafka'] },
  storage: { label: 'å¯¹è±¡å­˜å‚¨', protocols: ['minio'] },
  api: { label: 'API', protocols: ['http', 'grpc', 'websocket'] },
};

export const PROTOCOL_META: Record<ProtocolType, { label: string; icon: string; description: string; category: string }> = {
  mqtt: { label: 'MQTT', icon: 'ğŸ“¡', description: 'IoT ä¼ æ„Ÿå™¨å®æ—¶æ•°æ®æµ', category: 'industrial' },
  opcua: { label: 'OPC-UA', icon: 'ğŸ­', description: 'PLC/DCS å·¥ä¸šæ§åˆ¶æ•°æ®', category: 'industrial' },
  modbus: { label: 'Modbus', icon: 'âš™ï¸', description: 'ä¼ ç»Ÿå·¥æ§è®¾å¤‡å¯„å­˜å™¨', category: 'industrial' },
  'ethernet-ip': { label: 'EtherNet/IP', icon: 'ğŸ”Œ', description: 'Allen-Bradley/Rockwell PLC CIP åè®®', category: 'industrial' },
  profinet: { label: 'PROFINET', icon: 'ğŸ› ï¸', description: 'è¥¿é—¨å­ S7 PLC å®æ—¶é€šä¿¡', category: 'industrial' },
  ethercat: { label: 'EtherCAT', icon: 'âš¡', description: 'é«˜æ€§èƒ½è¿åŠ¨æ§åˆ¶ä¸ä¼ºæœé©±åŠ¨', category: 'industrial' },
  mysql: { label: 'MySQL', icon: 'ğŸ¬', description: 'å…³ç³»å‹æ•°æ®åº“', category: 'database' },
  postgresql: { label: 'PostgreSQL', icon: 'ğŸ˜', description: 'é«˜çº§å…³ç³»å‹æ•°æ®åº“', category: 'database' },
  kafka: { label: 'Kafka', icon: 'ğŸ“¨', description: 'äº‹ä»¶æµ/æ—¥å¿—èšåˆ', category: 'messaging' },
  clickhouse: { label: 'ClickHouse', icon: 'âš¡', description: 'åˆ†æå‹åˆ—å¼æ•°æ®åº“', category: 'database' },
  redis: { label: 'Redis', icon: 'ğŸ”´', description: 'ç¼“å­˜/å®æ—¶çŠ¶æ€', category: 'database' },
  neo4j: { label: 'Neo4j', icon: 'ğŸ•¸ï¸', description: 'å›¾æ•°æ®åº“', category: 'database' },
  minio: { label: 'MinIO/S3', icon: 'ğŸ“¦', description: 'æ–‡ä»¶/æ¨¡å‹/å¿«ç…§å­˜å‚¨', category: 'storage' },
  influxdb: { label: 'InfluxDB', icon: 'ğŸ“ˆ', description: 'æ—¶åºæ•°æ®å­˜å‚¨', category: 'database' },
  qdrant: { label: 'Qdrant', icon: 'ğŸ”', description: 'å‘é‡æ£€ç´¢', category: 'database' },
  http: { label: 'HTTP REST', icon: 'ğŸŒ', description: 'å¤–éƒ¨ç³»ç»Ÿ REST API', category: 'api' },
  grpc: { label: 'gRPC', icon: 'ğŸš€', description: 'é«˜æ€§èƒ½æœåŠ¡é—´é€šä¿¡', category: 'api' },
  websocket: { label: 'WebSocket', icon: 'ğŸ”Œ', description: 'å®æ—¶åŒå‘é€šä¿¡', category: 'api' },
};

// ============ Connector ç±»å‹ ============

export type ConnectorStatus = 'draft' | 'testing' | 'connected' | 'disconnected' | 'error';

export interface ConnectorInfo {
  id: number;
  connectorId: string;
  name: string;
  description: string | null;
  protocolType: ProtocolType;
  connectionParams: Record<string, unknown>;
  authConfig: Record<string, unknown> | null;
  healthCheckConfig: Record<string, unknown> | null;
  status: ConnectorStatus;
  lastHealthCheck: string | null;
  lastError: string | null;
  sourceRef: string | null;
  tags: string[] | null;
  createdAt: string;
  createdBy: string | null;
  updatedAt: string;
  endpointCount?: number;
  bindingCount?: number;
}

export interface ConnectorWithEndpoints extends ConnectorInfo {
  endpoints: EndpointInfo[];
}

// ============ Endpoint ç±»å‹ ============

export type ResourceType = 'topic' | 'table' | 'collection' | 'bucket' | 'register' | 'node' | 'api_path' | 'api' | 'measurement' | 'stream' | 'key' | 'graph'
  | 'slave' | 'pdo-entry' | 'sdo' | 'tag' | 'cip-object' | 'assembly' | 'io-data' | 'diagnostic';
export type DataFormat = 'json' | 'csv' | 'parquet' | 'binary' | 'protobuf' | 'line_protocol' | 'msgpack' | 'xml' | 'text';

export interface SamplingConfig {
  mode: 'continuous' | 'triggered' | 'scheduled';
  intervalMs?: number;
  trigger?: {
    type: 'threshold' | 'change' | 'cron';
    metric?: string;
    warningLevel?: number;
    alarmLevel?: number;
    expression?: string;
  };
  buffer?: {
    preTriggerSec?: number;
    postTriggerSec?: number;
    maxBufferSizeMB?: number;
  };
}

export interface PreprocessConfig {
  edgeCompute?: string[];
  compressionRatio?: number;
  filterRules?: Array<{ field: string; operator: string; value: unknown }>;
}

export type EndpointStatus = 'active' | 'inactive' | 'error' | 'discovered';

export interface EndpointInfo {
  id: number;
  endpointId: string;
  connectorId: string;
  name: string;
  resourcePath: string;
  resourceType: ResourceType;
  dataFormat: DataFormat | null;
  schemaInfo: Record<string, unknown> | null;
  samplingConfig: SamplingConfig | null;
  preprocessConfig: PreprocessConfig | null;
  protocolConfigId: string | null;
  sensorId: string | null;
  status: EndpointStatus;
  discoveredAt: string | null;
  metadata: Record<string, unknown> | null;
  createdAt: string;
  updatedAt: string;
  bindings?: BindingInfo[];
}

// ============ Binding ç±»å‹ ============

export type BindingTargetType =
  | 'pipeline_node'
  | 'kg_data_node'
  | 'sampling_config'
  | 'slice_rule'
  | 'edge_gateway'
  | 'stream_processor'
  | 'event_bus_topic';

export type BindingDirection = 'ingest' | 'egress' | 'bidirectional';

export interface TransformConfig {
  fieldMappings?: Array<{ source: string; target: string; transform?: string }>;
  unitConversions?: Array<{ field: string; fromUnit: string; toUnit: string; factor: number }>;
  filters?: Array<{ field: string; operator: string; value: unknown }>;
}

export interface BufferConfig {
  enabled: boolean;
  maxSizeMB?: number;
  flushIntervalMs?: number;
  retryPolicy?: {
    maxRetries: number;
    backoffMs: number;
    deadLetterQueue?: string;
  };
}

export interface SyncStats {
  totalMessages: number;
  totalBytes: number;
  errorCount: number;
  avgLatencyMs: number;
  lastMessageAt: string | null;
}

export type BindingStatus = 'active' | 'inactive' | 'error' | 'paused';

export interface BindingInfo {
  id: number;
  bindingId: string;
  endpointId: string;
  targetType: BindingTargetType;
  targetId: string;
  direction: BindingDirection;
  transformConfig: TransformConfig | null;
  bufferConfig: BufferConfig | null;
  status: BindingStatus;
  lastSyncAt: string | null;
  syncStats: SyncStats | null;
  createdAt: string;
  updatedAt: string;
  // å‰ç«¯å±•ç¤ºç”¨çš„å…³è”ä¿¡æ¯
  endpointName?: string;
  connectorName?: string;
  targetName?: string;
}

// ============ è¿æ¥æµ‹è¯• ============

export interface ConnectionTestResult {
  success: boolean;
  latencyMs: number;
  message: string;
  details?: Record<string, unknown>;
  serverVersion?: string;
}

export interface HealthCheckResult {
  status: 'healthy' | 'degraded' | 'unhealthy';
  latencyMs: number;
  message: string;
  metrics?: Record<string, unknown>;
  checkedAt: string;
}

// ============ åè®®é…ç½® Schema ============

export interface ProtocolConfigField {
  key: string;
  label: string;
  type: 'string' | 'number' | 'boolean' | 'select' | 'password' | 'json' | 'textarea';
  required: boolean;
  defaultValue?: unknown;
  placeholder?: string;
  description?: string;
  options?: Array<{ label: string; value: string }>;
  group?: string;
}

export interface ProtocolConfigSchema {
  protocolType: ProtocolType;
  label: string;
  icon: string;
  description: string;
  category: string;
  connectionFields: ProtocolConfigField[];
  authFields: ProtocolConfigField[];
  advancedFields?: ProtocolConfigField[];
}

// ============ èµ„æºå‘ç° ============

export interface DiscoveredEndpoint {
  resourcePath: string;
  resourceType: ResourceType;
  name: string;
  dataFormat?: DataFormat;
  schemaInfo?: Record<string, unknown>;
  metadata?: Record<string, unknown>;
}

// ============ ç»Ÿè®¡ ============

export interface AccessLayerStats {
  totalConnectors: number;
  connectedCount: number;
  errorCount: number;
  totalEndpoints: number;
  totalBindings: number;
  protocolDistribution: Record<string, number>;
  statusDistribution: Record<string, number>;
}

// ============ å‰ç«¯ DataSource å…¼å®¹æ˜ å°„ ============

/** æ—§ DataSourceType â†’ æ–° ProtocolType æ˜ å°„ */
export const LEGACY_TYPE_MAP: Record<string, ProtocolType> = {
  file: 'minio',
  database: 'mysql',
  api: 'http',
  mqtt: 'mqtt',
  opcua: 'opcua',
  modbus: 'modbus',
};
